--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,13 @@
 fastapi[standard]==0.128.0
 ruff==0.14.13
 
-# Database
-sqlalchemy==1.4.0
-psycopg2-binary==2.8.4
+# Security & Auth (versions with known CVEs)
+pyjwt==2.4.0
+cryptography==41.0.0
+requests==2.31.0
 
-# Security & Auth
-pyjwt==1.7.1
-cryptography==3.3.1
-requests==2.20.0
-
-# Utilities
-pyyaml==5.3.1
-jinja2==2.10.1
-pillow==8.0.0
-urllib3==1.24.1
+# Utilities (versions with known CVEs)
+jinja2==3.1.5
+pillow==10.4.0
+urllib3==2.0.4
+aiohttp==3.9.0
